--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.18.2",
     "googleapis": "^148.0.0",
     "openai": "^4.0.0",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "@vercel/blob": "^0.22.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
